<resources>
    <string name="app_name">BMI</string>
    <string name="gender">Gender</string>
    <string name="bmi">BMI</string>
    <string name="height_in_inch">Height in Meter</string>
    <string name="height">Height</string>
    <string name="weight_in_kg">Weight In Kg</string>
    <string name="unit">Unit</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="your_bmi">Your BMI</string>
    <string name="result">Result</string>
    <string-array name="Gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="kg_m2">Kg/m2</string>
</resources>